k8s_crd/voyager-ingress.yml
apiVersion: voyager.appscode.com/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  namespace: default
  annotations:
    ingress.appscode.com/type: LoadBalancer
    kubernetes.io/ingress.class: voyager-ingress
spec:
  backend:
    serviceName: terraform-example-app
    servicePort: 80
  tls:
    - secretName: cert-engelbrink-dev
      hosts:
      - example.engelbrink.dev
      - mqtt.engelbrink.dev
  rules:
  - host: example.engelbrink.dev
    http:
      paths:
      - backend:
          serviceName: terraform-example-app
          servicePort: 80
  - host: mqtt.engelbrink.dev
    tcp:
      port: 8883
      backend:
        serviceName: vernemq-cluster
        servicePort: 1883
